<resources>
    <string name="ent_total" formatted="false">Total sum</string>
    <string name="ent_income" formatted="false">Income</string>
    <string name="ok" formatted="false">OK</string>
    <string name="cancel" formatted="false">Cancel</string>
    <string name="ent_outcome" formatted="false">Expense</string>
    <string name="ent_name" formatted="false">Name</string>
    <string name="ent_type" formatted="false">Type</string>
    <string name="ent_date" formatted="false">Date</string>
    <string name="ent_time" formatted="false">Time</string>
    <string name="ent_amount" formatted="false">Amount</string>
    <string name="ent_comment" formatted="false">Comment</string>
    <string name="ent_search" formatted="false">Search</string>
    <string name="sort_type_asc" formatted="false">Ascending</string>
    <string name="sort_type_desc" formatted="false">Descending</string>
    <string name="ent_start_date" formatted="false">Start date</string>
    <string name="ent_end_date" formatted="false">Finish date</string>
    <string name="ent_date_range" formatted="false">Date interval</string>
    <string name="ent_date_range_day" formatted="false">Day</string>
    <string name="ent_date_range_week" formatted="false">Week</string>
    <string name="ent_date_range_month" formatted="false">Month</string>
    <string name="ent_date_range_year" formatted="false">Year</string>
    <string name="ent_date_range_current" formatted="false">Current</string>
    <string name="ent_date_range_past" formatted="false">Last</string>
    <string name="ent_date_range_current_and_past" formatted="false">Curr. and last</string>
    <string name="ent_min" formatted="false">min</string>
    <string name="ent_max" formatted="false">max</string>
    <string name="ent_both" formatted="false">Both</string>
    <string name="ent_exchange_rate" formatted="false">Exchange rate</string>
    <string name="ent_additional" formatted="false">Additional</string>
    <string name="ent_references" formatted="false">Entities</string>
    <string name="ent_help" formatted="false">Help</string>
    <string name="ent_percent" formatted="false">Percent</string>
    <string name="ent_percents" formatted="false">Percents</string>
    <string name="ent_more" formatted="false">More</string>
    <string name="ent_password" formatted="false">Password</string>
    <string name="ent_item" formatted="false">Item</string>
    <string name="ent_nested_item" formatted="false">Child item</string>
    <string name="ent_calculator" formatted="false">Calculator</string>
    <string name="ent_summary" formatted="false">Summary</string>
    <string name="ent_date_time" formatted="false">Date, time</string>
    <string name="ent_payee_dest_account" formatted="false">Payee or destination account</string>
    <string name="ent_sms_body" formatted="false">SMS body</string>
    <string name="ent_monday" formatted="false">Monday</string>
    <string name="ent_sunday" formatted="false">Sunday</string>
    <string name="ent_undefined" formatted="false">Undefined</string>
    <string name="act_create" formatted="false">New</string>
    <string name="act_select" formatted="false">Select</string>
    <string name="act_add" formatted="false">Add</string>
    <string name="act_add_nested" formatted="false">Add child</string>
    <string name="act_edit" formatted="false">Edit</string>
    <string name="act_delete" formatted="false">Delete</string>
    <string name="act_delete_all" formatted="false">Delete all</string>
    <string name="act_undo" formatted="false">Undo</string>
    <string name="act_duplicate" formatted="false">Duplicate</string>
    <string name="act_sort" formatted="false">Sort</string>
    <string name="act_paste" formatted="false">Paste</string>
    <string name="act_next" formatted="false">Next</string>
    <string name="act_save" formatted="false">Save</string>
    <string name="act_check_and_save" formatted="false">Check &amp; Save</string>
    <string name="act_ask_question" formatted="false">Ask a question</string>
    <string name="act_new_expense" formatted="false">New expense</string>
    <string name="act_new_income" formatted="false">New income</string>
    <string name="act_new_transfer" formatted="false">New transfer</string>
    <string name="act_do_not_remind" formatted="false">Don\'t remind</string>
    <string name="ttl_enter_new_name" formatted="false">Enter new name</string>
    <string name="ttl_confirm_action" formatted="false">Confirm action</string>
    <string name="ttl_select_action" formatted="false">Select an action</string>
    <string name="ttl_error" formatted="false">Error</string>
    <string name="ttl_delete_item_confirm" formatted="false">Delete item?</string>
    <string name="ttl_email_subject" formatted="false">Question about Fingen app</string>
    <string name="ttl_email_body" formatted="false">Write your question</string>
    <string name="ttl_billing_error" formatted="false">Server connection error (code %s)</string>
    <string name="msg_set_date" formatted="false">Specify date</string>
    <string name="msg_set_time" formatted="false">Specify time</string>
    <string name="msg_invalid_data_in_fields" formatted="false">Invalid data</string>
    <string name="msg_error_on_write_to_db" formatted="false">Error on write to DB. Operation cancelled.</string>
    <string name="msg_error_on_read_from_db" formatted="false">Error on read from DB</string>
    <string name="msg_press_back_again_to_exit" formatted="false">Press back again to exit</string>
    <string name="ent_account" formatted="false">Account</string>
    <string name="ent_accounts" formatted="false">Accounts</string>
    <string name="ent_emitent" formatted="false">Issuer</string>
    <string name="ent_last4digits" formatted="false">Last 4 digits of the card number</string>
    <string name="ent_start_balance" formatted="false">Opening amount</string>
    <string name="ent_credit_limit" formatted="false">Credit limit</string>
    <string name="ent_account_isclosed" formatted="false">Account closed</string>
    <string name="ent_close_account" formatted="false">Close account</string>
    <string name="ent_open_account" formatted="false">Open account</string>
    <string name="ent_account_isincludeintototals" formatted="false">Include into totals</string>
    <string name="ent_new_account" formatted="false">New account</string>
    <string name="ent_edit_account" formatted="false">Edit account</string>
    <string name="ent_all_accounts" formatted="false">All accounts</string>
    <string name="ent_all_closed_accounts" formatted="false">All closed accounts</string>
    <string name="ent_active_account_set" formatted="false">Active accounts set</string>
    <string name="account_type_cash" formatted="false">Cash</string>
    <string name="account_type_bank_account" formatted="false">Bank account</string>
    <string name="account_type_debit_card" formatted="false">Debit card</string>
    <string name="account_type_credit_card" formatted="false">Credit card</string>
    <string name="account_type_asset" formatted="false">Asset</string>
    <string name="account_type_red" formatted="false">Liability</string>
    <string name="account_type_other" formatted="false">Other</string>
    <string name="acc_sort_type_custom" formatted="false">Manual</string>
    <string name="acc_sort_type_date_creation" formatted="false">By date of creation</string>
    <string name="act_drag_mode" formatted="false">Manual accounts ordering</string>
    <string name="act_balance_adjustment" formatted="false">Balance adjustment</string>
    <string name="ent_transaction" formatted="false">Transaction</string>
    <string name="ent_transfer" formatted="false">Transfer</string>
    <string name="act_show_transactions" formatted="false">Show transactions</string>
    <string name="act_select_all" formatted="false">Select all</string>
    <string name="act_unselect_all" formatted="false">Remove selection</string>
    <string name="act_filter_on_selected" formatted="false">Add filter...</string>
    <string name="act_select_on_selected" formatted="false">Select...</string>
    <string name="act_add_child" formatted="false">Add child</string>
    <string name="act_convert_to_child" formatted="false">Convert co child</string>
    <string name="ent_currency_code" formatted="false">Code</string>
    <string name="ent_currency_symbol" formatted="false">Symbols to display</string>
    <string name="ent_currency_scale" formatted="false">Number of digits after decimal point</string>
    <string name="ttl_select_system_currency" formatted="false">System currencies</string>
    <string name="ent_templates" formatted="false">Templates</string>
    <string name="act_create_template" formatted="false">New template</string>
    <string name="act_split" formatted="false">Split</string>
    <string name="ent_settings" formatted="false">Preferences</string>
    <string name="pref_header_general" formatted="false">General</string>
    <string name="pref_title_start_tab" formatted="false">Starting tab</string>
    <string name="pref_title_theme" formatted="false">Theme</string>
    <string name="pref_tab_order" formatted="false">Main screen tab order</string>
    <string name="pref_expand_lists" formatted="false">Expand nested lists</string>
    <string name="pref_hide_sums_panel" formatted="false">Hide sums panel</string>
    <string name="pref_enable_scan_qr" formatted="false">Enable QR scanning</string>
    <string name="pref_fts_credentials" formatted="false">FTS Credentials</string>
    <string name="pref_title_accounts_show_income_expense_for_accounts" formatted="false">Show income/expense for accounts</string>
    <string name="pref_title_accounts_list_show_closed" formatted="false">Show closed accounts</string>
    <string name="pref_title_accounts_list_show_credits" formatted="false">Show credit accounts</string>
    <string name="pref_title_account_click_action" formatted="false">Account tap action</string>
    <string name="pref_title_detect_locations" formatted="false">Automatically detect location</string>
    <string name="pref_header_sms" formatted="false">SMS</string>
    <string name="pref_title_auto_create_transaction_on_full_set_of_patterns" formatted="false">Automatically create transactions</string>
    <string name="pref_title_auto_create_prerequisites" formatted="false">Autocreation Prerequisites</string>
    <string name="pref_summary_auto_create_transaction_on_full_set_of_patterns" formatted="false">If all markers specified in "Autocreation Prerequisites" are found in the SMS</string>
    <string name="pref_title_check_actual_balance_in_sms" formatted="false">Compare account balance with the balance in SMS</string>
    <string name="pref_title_balance_compare_error" formatted="false">Min. balance difference</string>
    <string name="pref_header_security" formatted="false">Security</string>
    <string name="pref_title_enable_pin_lock" formatted="false">Enable PIN protection</string>
    <string name="pref_title_change_pin" formatted="false">Change PIN</string>
    <string name="pref_title_pin_length" formatted="false">PIN length</string>
    <string name="pref_header_transactions" formatted="false">Transactions</string>
    <string name="pref_title_compact_view_mode" formatted="false">Compact view mode</string>
    <string name="pref_summary_compact_view_mode" formatted="false">App restart required</string>
    <string name="pref_title_select_payee_style" formatted="false">Payee selection style</string>
    <string name="pref_title_show_transaction_type_titles" formatted="false">Show transaction type titles</string>
    <string name="ent_default_department" formatted="false">Default department</string>
    <string name="title_reset_default_department" formatted="false">Reset default department</string>
    <string name="ttl_summary_items" formatted="false">Summary tab items</string>
</resources>