<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_level"
    android:title="@string/ent_settings">

    <PreferenceScreen
        android:key="general_screen"
        android:persistent="false"
        android:title="@string/pref_header_general">

        <ListPreference
            android:key="start_tab"
            android:title="@string/pref_title_start_tab"
            android:defaultValue="0"
            android:entries="@array/pref_start_tab_titles"
            android:entryValues="@array/pref_start_tab_values"/>
        <ListPreference
            android:key="theme"
            android:title="@string/pref_title_theme"
            android:defaultValue="0"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="compact_view_mode"
            android:title="@string/pref_title_compact_view_mode"
            android:summary="@string/pref_summary_compact_view_mode"/>
        <MultiSelectListPreference
            android:entries="@array/pref_summary_items_captions"
            android:entryValues="@array/pref_summary_items_values"
            android:defaultValue="@array/pref_summary_items_values"
            android:key="summary_items"
            android:title="@string/ttl_summary_items"/>
        <Preference
            android:key="main_screen_tab_order"
            android:title="@string/pref_tab_order"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="hide_sums_panel"
            android:title="@string/pref_hide_sums_panel"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="expand_lists"
            android:title="@string/pref_expand_lists"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_scan_qr"
            android:title="@string/pref_enable_scan_qr"/>
        <Preference
            android:key="fts_credentials"
            android:title="@string/pref_fts_credentials"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="accounts_list_screen"
        android:persistent="false"
        android:title="@string/ent_accounts">
        <ListPreference
            android:key="account_click_action"
            android:title="@string/pref_title_account_click_action"
            android:defaultValue="0"
            android:entries="@array/pref_account_click_actions_titles"
            android:entryValues="@array/pref_account_click_actions_values"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_closed_accounts"
            android:title="@string/pref_title_accounts_list_show_closed"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_debt_accounts"
            android:title="@string/pref_title_accounts_list_show_credits"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_income_expense_for_accounts"
            android:title="@string/pref_title_accounts_show_income_expense_for_accounts"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="security_screen"
        android:persistent="false"
        android:title="@string/pref_header_security">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_pin_lock"
            android:title="@string/pref_title_enable_pin_lock"/>
        <Preference
            android:key="change_pin"
            android:title="@string/pref_title_change_pin"/>
        <ListPreference
            android:key="pin_length"
            android:title="@string/pref_title_pin_length"
            android:defaultValue="5"
            android:entries="@array/pref_pin_length_values"
            android:entryValues="@array/pref_pin_length_values"
            />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="transactions_screen"
        android:persistent="false"
        android:title="@string/pref_header_transactions">
        <ListPreference
            android:key="payee_selection_style"
            android:title="@string/pref_title_select_payee_style"
            android:defaultValue="0"
            android:entries="@array/pref_payee_selection_styles_titles"
            android:entryValues="@array/pref_payee_selection_styles_values"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="detect_locations"
            android:title="@string/pref_title_detect_locations"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_transaction_type_titles"
            android:title="@string/pref_title_show_transaction_type_titles"/>
        <Preference
            android:key="default_department"
            android:title="@string/ent_default_department"/>
        <Preference
            android:key="reset_default_department"
            android:title="@string/title_reset_default_department"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="sms_screen"
        android:persistent="false"
        android:title="@string/pref_header_sms">
        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_create_transaction_on_full_set_of_patterns"
            android:title="@string/pref_title_auto_create_transaction_on_full_set_of_patterns"
            android:summary="@string/pref_summary_auto_create_transaction_on_full_set_of_patterns"/>
        <MultiSelectListPreference
            android:entries="@array/pref_autocreate_prerequisites_captions"
            android:entryValues="@array/pref_autocreate_prerequisites_values"
            android:defaultValue="@array/pref_autocreate_prerequisites_values"
            android:key="autocreate_prerequisites"
            android:title="@string/pref_title_auto_create_prerequisites"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="check_actual_balance_in_sms"
            android:title="@string/pref_title_check_actual_balance_in_sms" />
        <EditTextPreference
            android:defaultValue="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:key="balance_compare_error"
            android:title="@string/pref_title_balance_compare_error"/>
    </PreferenceScreen>
</PreferenceScreen>