<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_filter_on_selected"
        android:title="@string/act_filter_on_selected"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_select_on_selected"
        android:title="@string/act_select_on_selected"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_edit"
        android:title="@string/act_edit"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_split"
        android:title="@string/act_split"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_dulpicate"
        android:title="@string/act_duplicate"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_create_template"
        android:title="@string/act_create_template"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/act_delete"
        android:orderInCategory="100"
        />
</menu>