<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?listItemBackground">

    <include
        layout="@layout/content_filter_card_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_box_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ent_income" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_box_outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ent_outcome" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/ent_min">

            <EditText
                android:id="@+id/edit_text_min_amount"
                style="@style/EditableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/ent_max">

            <EditText
                android:id="@+id/edit_text_max_amount"
                style="@style/EditableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                tools:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_type_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ent_transaction" />

        <RadioButton
            android:id="@+id/radio_button_type_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ent_transfer" />

        <RadioButton
            android:id="@+id/radio_button_type_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ent_both" />
    </RadioGroup>
</LinearLayout>