<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  -->


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="4dp">

        <Button
            style="@style/BlueButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ttl_select_system_currency"
            android:id="@+id/button_system_currencies"
            android:padding="8dp"
            android:layout_margin="8dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/EditableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ent_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_code"
                style="@style/EditableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ent_currency_code"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textCapCharacters"
                android:maxLength="3"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_symbol"
                style="@style/EditableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ent_currency_symbol"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_scale"
                style="@style/EditableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ent_currency_scale"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>